--- a/content/sections/section1/notebook/cs109a_section_1.ipynb
+++ b/content/sections/section1/notebook/cs109a_section_1.ipynb
@@ -20,11 +20,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "blockquote { background: #AEDE94; }\n",
+       "h1 { \n",
+       "    padding-top: 25px;\n",
+       "    padding-bottom: 25px;\n",
+       "    text-align: left; \n",
+       "    padding-left: 10px;\n",
+       "    background-color: #DDDDDD; \n",
+       "    color: black;\n",
+       "}\n",
+       "h2 { \n",
+       "    padding-top: 10px;\n",
+       "    padding-bottom: 10px;\n",
+       "    text-align: left; \n",
+       "    padding-left: 5px;\n",
+       "    background-color: #EEEEEE; \n",
+       "    color: black;\n",
+       "}\n",
+       "\n",
+       "div.exercise {\n",
+       "\tbackground-color: #ffcccc;\n",
+       "\tborder-color: #E9967A; \t\n",
+       "\tborder-left: 5px solid #800080; \n",
+       "\tpadding: 0.5em;\n",
+       "}\n",
+       "\n",
+       "span.sub-q {\n",
+       "\tfont-weight: bold;\n",
+       "}\n",
+       "div.theme {\n",
+       "\tbackground-color: #DDDDDD;\n",
+       "\tborder-color: #E9967A; \t\n",
+       "\tborder-left: 5px solid #800080; \n",
+       "\tpadding: 0.5em;\n",
+       "\tfont-size: 18pt;\n",
+       "}\n",
+       "div.gc { \n",
+       "\tbackground-color: #AEDE94;\n",
+       "\tborder-color: #E9967A; \t \n",
+       "\tborder-left: 5px solid #800080; \n",
+       "\tpadding: 0.5em;\n",
+       "\tfont-size: 12pt;\n",
+       "}\n",
+       "p.q1 { \n",
+       "    padding-top: 5px;\n",
+       "    padding-bottom: 5px;\n",
+       "    text-align: left; \n",
+       "    padding-left: 5px;\n",
+       "    background-color: #EEEEEE; \n",
+       "    color: black;\n",
+       "}\n",
+       "header {\n",
+       "   padding-top: 35px;\n",
+       "    padding-bottom: 35px;\n",
+       "    text-align: left; \n",
+       "    padding-left: 10px;\n",
+       "    background-color: #DDDDDD; \n",
+       "    color: black;\n",
+       "}\n",
+       "</style>\n",
+       "\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## RUN THIS CELL TO GET THE RIGHT FORMATTING \n",
     "import requests\n",
@@ -48,10 +120,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -70,10 +140,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Setting up 'requests' to make HTTPS requests properly takes some extra steps... we'll skip them for now.\n",
@@ -122,11 +190,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>discipline</th>\n",
+       "      <th>winner</th>\n",
+       "      <th>desc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1901</td>\n",
+       "      <td>chemistry</td>\n",
+       "      <td>Jacobus H. van 't Hoff</td>\n",
+       "      <td>in recognition of the extraordinary services h...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1901</td>\n",
+       "      <td>literature</td>\n",
+       "      <td>Sully Prudhomme</td>\n",
+       "      <td>in special recognition of his poetic compositi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1901</td>\n",
+       "      <td>medicine</td>\n",
+       "      <td>Emil von Behring</td>\n",
+       "      <td>for his work on serum therapy, especially its ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1901</td>\n",
+       "      <td>peace</td>\n",
+       "      <td>Henry Dunant</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1901</td>\n",
+       "      <td>peace</td>\n",
+       "      <td>Fr&amp;eacute;d&amp;eacute;ric Passy</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year  discipline                        winner  \\\n",
+       "0  1901   chemistry        Jacobus H. van 't Hoff   \n",
+       "1  1901  literature               Sully Prudhomme   \n",
+       "2  1901    medicine              Emil von Behring   \n",
+       "3  1901       peace                  Henry Dunant   \n",
+       "4  1901       peace  Fr&eacute;d&eacute;ric Passy   \n",
+       "\n",
+       "                                                desc  \n",
+       "0  in recognition of the extraordinary services h...  \n",
+       "1  in special recognition of his poetic compositi...  \n",
+       "2  for his work on serum therapy, especially its ...  \n",
+       "3                                                NaN  \n",
+       "4                                                NaN  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.read_csv(\"../data/github-nobel-prize-winners.csv\")\n",
     "df.head()"
@@ -1486,7 +1640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.4"
   },
   "varInspector": {
    "cols": {
