--- a/content/sections/section2/notebook/cs109a_section_2.ipynb
+++ b/content/sections/section2/notebook/cs109a_section_2.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +795,7 @@
        "12.0    9.612903  66.604052   0.176609  3781.741935  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1220,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1438,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1448,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1523,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1564,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1628,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1667,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1677,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1699,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1741,7 +1741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1772,7 +1772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1790,10 +1790,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   214.4</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Tue, 24 Sep 2019</td> <th>  Prob (F-statistic):</th> <td>9.18e-41</td>\n",
+       "  <th>Date:</th>             <td>Wed, 25 Sep 2019</td> <th>  Prob (F-statistic):</th> <td>9.18e-41</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>17:54:25</td>     <th>  Log-Likelihood:    </th> <td> -4522.2</td>\n",
+       "  <th>Time:</th>                 <td>17:47:18</td>     <th>  Log-Likelihood:    </th> <td> -4522.2</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>   511</td>      <th>  AIC:               </th> <td>   9048.</td>\n",
@@ -1842,8 +1842,8 @@
        "Dep. Variable:                  count   R-squared:                       0.296\n",
        "Model:                            OLS   Adj. R-squared:                  0.295\n",
        "Method:                 Least Squares   F-statistic:                     214.4\n",
-       "Date:                Tue, 24 Sep 2019   Prob (F-statistic):           9.18e-41\n",
-       "Time:                        17:54:25   Log-Likelihood:                -4522.2\n",
+       "Date:                Wed, 25 Sep 2019   Prob (F-statistic):           9.18e-41\n",
+       "Time:                        17:47:18   Log-Likelihood:                -4522.2\n",
        "No. Observations:                 511   AIC:                             9048.\n",
        "Df Residuals:                     509   BIC:                             9057.\n",
        "Df Model:                           1                                         \n",
@@ -1865,7 +1865,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 106,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1891,7 +1891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1900,7 +1900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1954,7 +1954,16 @@
     }
    ],
    "source": [
-    "# %load '../solutions/sol7.py'"
+    "# %load solutions/sol7.py\n",
+    "# Confidence Interval using Stats Model Summary\n",
+    "thresh = 0.05\n",
+    "intervals = results.conf_int(alpha=thresh)\n",
+    "\n",
+    "# Renaming column names\n",
+    "first_col = str(thresh/2*100)+\"%\"\n",
+    "second_col = str((1-thresh/2)*100)+\"%\"\n",
+    "intervals = intervals.rename(columns={0:first_col,1:second_col})\n",
+    "display(intervals)"
    ]
   },
   {
