--- a/hw/hw3/cs109a_hw3_109_submit.ipynb
+++ b/hw/hw3/cs109a_hw3_109_submit.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -102,7 +102,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -513,7 +513,7 @@
        "max      367.000000    886.000000  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -853,7 +853,7 @@
        "2011-01-05      82        1518    1600  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 10,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -1228,7 +1228,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 11,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -1290,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 12,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 13,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -1386,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1403,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 15,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -1477,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 16,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -1552,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 17,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -1616,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 18,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -1643,7 +1643,7 @@
        "  <th>Date:</th>             <td>Wed, 09 Oct 2019</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>22:07:31</td>     <th>  Log-Likelihood:    </th> <td> -55215.</td> \n",
+       "  <th>Time:</th>                 <td>23:16:33</td>     <th>  Log-Likelihood:    </th> <td> -55215.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  8689</td>      <th>  AIC:               </th> <td>1.105e+05</td>\n",
@@ -1783,7 +1783,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.410\n",
        "Method:                 Least Squares   F-statistic:                     201.9\n",
        "Date:                Wed, 09 Oct 2019   Prob (F-statistic):               0.00\n",
-       "Time:                        22:07:31   Log-Likelihood:                -55215.\n",
+       "Time:                        23:16:33   Log-Likelihood:                -55215.\n",
        "No. Observations:                8689   AIC:                         1.105e+05\n",
        "Df Residuals:                    8658   BIC:                         1.107e+05\n",
        "Df Model:                          30                                         \n",
@@ -1837,7 +1837,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 97,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1887,7 +1887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 19,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -1973,7 +1973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1986,7 +1986,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1998,7 +1998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -2026,7 +2026,7 @@
        "  <th>Date:</th>             <td>Wed, 09 Oct 2019</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>17:46:35</td>     <th>  Log-Likelihood:    </th> <td> -54433.</td> \n",
+       "  <th>Time:</th>                 <td>23:16:34</td>     <th>  Log-Likelihood:    </th> <td> -54433.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  8689</td>      <th>  AIC:               </th> <td>1.089e+05</td>\n",
@@ -2175,7 +2175,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.507\n",
        "Method:                 Least Squares   F-statistic:                     271.3\n",
        "Date:                Wed, 09 Oct 2019   Prob (F-statistic):               0.00\n",
-       "Time:                        17:46:35   Log-Likelihood:                -54433.\n",
+       "Time:                        23:16:34   Log-Likelihood:                -54433.\n",
        "No. Observations:                8689   AIC:                         1.089e+05\n",
        "Df Residuals:                    8655   BIC:                         1.092e+05\n",
        "Df Model:                          33                                         \n",
@@ -2232,7 +2232,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2273,7 +2273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -2301,7 +2301,7 @@
        "  <th>Date:</th>             <td>Wed, 09 Oct 2019</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>17:46:36</td>     <th>  Log-Likelihood:    </th> <td> -54489.</td> \n",
+       "  <th>Time:</th>                 <td>23:16:34</td>     <th>  Log-Likelihood:    </th> <td> -54489.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  8689</td>      <th>  AIC:               </th> <td>1.090e+05</td>\n",
@@ -2435,7 +2435,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.500\n",
        "Method:                 Least Squares   F-statistic:                     301.2\n",
        "Date:                Wed, 09 Oct 2019   Prob (F-statistic):               0.00\n",
-       "Time:                        17:46:36   Log-Likelihood:                -54489.\n",
+       "Time:                        23:16:34   Log-Likelihood:                -54489.\n",
        "No. Observations:                8689   AIC:                         1.090e+05\n",
        "Df Residuals:                    8659   BIC:                         1.093e+05\n",
        "Df Model:                          29                                         \n",
@@ -2487,7 +2487,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2594,7 +2594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -2623,7 +2623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 24,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -2733,7 +2733,7 @@
        "max    1.638331e+00  1.949053e+00  2.511537e+00  5.355858e+00"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2784,7 +2784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2808,7 +2808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 40,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -2823,20 +2823,94 @@
      "output_type": "stream",
      "text": [
       "hour\n",
-      "hum\n"
+      "hum\n",
+      "temp\n",
+      "windspeed\n",
+      "hour\n",
+      "hum\n",
+      "temp\n",
+      "windspeed\n"
      ]
     },
     {
-     "ename": "IndexError",
-     "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-78-0809ffe12474>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[1;31m# check if it worked\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 32\u001b[1;33m \u001b[0mpractice_X_train_poly\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maugment_dataset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpractice_X_train_scaled\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m   \u001b[1;31m# add cubic\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     33\u001b[0m \u001b[0mpractice_X_train_poly\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maugment_dataset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpractice_X_train_scaled\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m   \u001b[1;31m# add quadratic\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     34\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpractice_X_train_poly\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-78-0809ffe12474>\u001b[0m in \u001b[0;36maugment_dataset\u001b[1;34m(scaled_train_data, degree)\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m         \u001b[1;31m# take column i of the copy (can do double brackets so I don't have to reshape)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m         \u001b[0mscaled_train_data_ci\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mscaled_train_data_cp\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcolumn\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[1;31m# create transformer with d degrees (CHANGE THIS)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>hour</th>\n",
+       "      <th>hum</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>windspeed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.350966</td>\n",
+       "      <td>-0.131358</td>\n",
+       "      <td>-1.331629</td>\n",
+       "      <td>0.511860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.776238</td>\n",
+       "      <td>1.064879</td>\n",
+       "      <td>0.641888</td>\n",
+       "      <td>0.511860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.373220</td>\n",
+       "      <td>0.180704</td>\n",
+       "      <td>1.368974</td>\n",
+       "      <td>-0.214334</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.776238</td>\n",
+       "      <td>-2.107748</td>\n",
+       "      <td>0.641888</td>\n",
+       "      <td>0.875363</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.516902</td>\n",
+       "      <td>-1.171563</td>\n",
+       "      <td>-1.643237</td>\n",
+       "      <td>-0.456939</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       hour       hum      temp  windspeed\n",
+       "0  1.350966 -0.131358 -1.331629   0.511860\n",
+       "1  0.776238  1.064879  0.641888   0.511860\n",
+       "2 -0.373220  0.180704  1.368974  -0.214334\n",
+       "3  0.776238 -2.107748  0.641888   0.875363\n",
+       "4 -0.516902 -1.171563 -1.643237  -0.456939"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2895,7 +2969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 27,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -2931,10 +3005,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "button": false,
-    "collapsed": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -2974,7 +3047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -3081,7 +3154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -3109,7 +3182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -3137,7 +3210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -3165,7 +3238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -3193,7 +3266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -3221,7 +3294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -3249,10 +3322,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "button": false,
-    "collapsed": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -3379,7 +3451,6 @@
    "execution_count": null,
    "metadata": {
     "button": false,
-    "collapsed": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
