--- a/hw/hw4/cs109a_HW4_109_submit.ipynb
+++ b/hw/hw4/cs109a_HW4_109_submit.ipynb
@@ -824,7 +824,7 @@
    ],
    "source": [
     "# Simple Logistic Model - following section 5 again\n",
-    "model_logistic = LogisticRegression(C=100000, solver = \"lbfgs\", fit_intercept = True).fit(X_train[[best_predictor]], y_train)\n",
+    "model_logistic = LogisticRegression(C=100000, solver = \"lbfgs\", fit_intercept = True).fit(X_train, y_train)\n",
     "\n",
     "# Predict\n",
     "y_pred_train_log = model_logistic.predict(np.array(X_train[best_predictor]).reshape(-1,1))\n",
